--- a/style.css
+++ b/style.css
@@ -1,103 +1,111 @@
 * {
-    margin: 0; padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background-color: #1e2227;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column;
+  background-color: #e9e9e9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
 
-    height: 100%;
+  height: 100%;
 
-    font-family: Arial, sans-serif;
-    color: #e9e9e9;
+  font-family: Arial, sans-serif;
+  color: #1f1f1f;
 }
 
 #play-button {
-    width: 150px;
-    height: 150px;
+  width: 150px;
+  height: 150px;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
 }
 
 .title {
-    margin-bottom: 40px;
-    font-size: 40px;
-    text-align: center;
+  margin-bottom: 40px;
+  font-size: 40px;
+  text-align: center;
 }
 
 #tempo {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .bpm {
-    font-size: 12px;
-    text-align: center;
+  font-size: 12px;
+  text-align: center;
 }
 
 .tempo-controls {
-    margin-top: 30px;
+  margin-top: 30px;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: row;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row;
 }
 
 .tempo-container {
-    margin: 0 15px;
+  margin: 0 15px;
 }
 
 button {
-    padding: 6px;
-    border: none;
-    border-radius: 100%;
-    width: 40px;
-    height: 40px;
-    margin: 5px;
-    background-color: #2a4949;
-    color: #e9e9e9;
-    cursor: pointer;
+  padding: 6px;
+  border: none;
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  background-color: #dc5252;
+  color: #1f1f1f;
+  cursor: pointer;
 }
 
 button:focus {
-    outline: none;
+  outline: none;
 }
 
 .created-by {
-    margin-top: 40px;
+  margin-top: 40px;
+  text-align: center;
 }
 
 a {
-    color: #e9e9e9;
+  color: #1f1f1f;
 }
 
 a:hover {
-    color: #356161;
+  color: #dc5252;
 }
 
 .play {
-    width: 0;
-    height: 0;
-    border-top: 30px solid transparent;
-    border-bottom: 30px solid transparent;
-    border-left: 50px solid #e9e9e9;
-    margin-left: 15px;
+  width: 0;
+  height: 0;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-left: 50px solid #ffffff;
+  margin-left: 15px;
 }
 
 .pause {
-    width: 15px;
-    height: 60px;
-    border: none;
-    border-left: 15px solid #e9e9e9;
-    border-right: 15px solid #e9e9e9;
+  width: 15px;
+  height: 60px;
+  border: none;
+  border-left: 15px solid #ffffff;
+  border-right: 15px solid #ffffff;
+}
+
+input {
+  text-align: center;
+  font-size: 40px;
+  width: 80px;
 }
